--- a/aspx/.gitignore
+++ b/aspx/.gitignore
@@ -57,3 +57,16 @@ $RECYCLE.BIN/
 
 # JetBrains Rider
 .idea/
+
+# ASP.NET WebForms specific files
+*.csproj.user
+*.vbproj.user
+*.csproj.webinfo
+*.vbproj.webinfo
+*.publishsettings
+*.config
+
+# Libraries
+lib/
+
+mono_crash*
