--- a/aspx/71.csproj
+++ b/aspx/71.csproj
@@ -43,9 +43,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BCrypt.Net-Next">
+      <HintPath>packages\BCrypt.Net-Next.4.0.3\lib\net472\BCrypt.Net-Next.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SqlClient">
+      <HintPath>packages\System.Data.SqlClient.4.8.5\lib\net461\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
-    <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
@@ -67,34 +75,104 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Projects.aspx.cs">
+  <!-- Archived/moved root admin code-behinds removed from compilation; admin/ folder contains new code-behinds -->
+    <Compile Include="admin\Admin.Master.cs">
       <SubType>ASPXCodeBehind</SubType>
-      <DependentUpon>Projects.aspx</DependentUpon>
+      <DependentUpon>Admin.Master</DependentUpon>
     </Compile>
-    <Compile Include="Profile.aspx.cs">
+    <Compile Include="admin\login.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
-      <DependentUpon>Profile.aspx</DependentUpon>
+      <DependentUpon>login.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Skills.aspx.cs">
+    <Compile Include="admin\dashboard.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
-      <DependentUpon>Skills.aspx</DependentUpon>
+      <DependentUpon>dashboard.aspx</DependentUpon>
     </Compile>
+    <Compile Include="admin\skills.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>skills.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\messages.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>messages.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\dashboard.aspx.designer.cs">
+      <DependentUpon>dashboard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\login.aspx.designer.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\skills.aspx.designer.cs">
+      <DependentUpon>skills.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\messages.aspx.designer.cs">
+      <DependentUpon>messages.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\projects.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>projects.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\profile.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>profile.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\profile.aspx.designer.cs">
+      <DependentUpon>profile.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\default.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\projects.aspx.designer.cs">
+      <DependentUpon>projects.aspx</DependentUpon>
+    </Compile>
+        <Compile Include="Default.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+        <Compile Include="Default.aspx.designer.cs">
+          <DependentUpon>Default.aspx</DependentUpon>
+        </Compile>
+  <!-- Projects.aspx.cs and Profile.aspx.cs converted to API handlers under /api/; stop compiling as page code-behinds -->
+  <!-- Removed Skills.aspx.cs compile entry per refactor: the page is now served via API handlers or archived -->
+  <!-- New source files added by refactor -->
+  <Compile Include="DAL\DatabaseHelper.cs" />
+  <Compile Include="DAL\ProjectRepository.cs" />
+  <Compile Include="DAL\MessagesRepository.cs" />
+  <Compile Include="DAL\ProfileRepository.cs" />
+  <Compile Include="DAL\SkillsRepository.cs" />
+  <Compile Include="Models\Profile.cs" />
+  <Compile Include="Models\Message.cs" />
+  <Compile Include="Models\Project.cs" />
+  <Compile Include="Utils\Constants.cs" />
+  <Compile Include="Utils\JsonHelper.cs" />
+  <Compile Include="Utils\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Projects.aspx" />
-    <Content Include="Profile.aspx" />
-    <Content Include="Skills.aspx" />
+  <Content Include="admin\Admin.Master" />
+    <Content Include="admin\login.aspx" />
+    <Content Include="admin\dashboard.aspx" />
+    <Content Include="admin\skills.aspx" />
+    <Content Include="admin\messages.aspx" />
+  <Content Include="admin\projects.aspx" />
+  <Content Include="api\profile.ashx" />
+  <Content Include="api\projects.ashx" />
+  <Content Include="api\skills.ashx" />
+  <Content Include="api\messages.ashx" />
+  <Content Include="Default.aspx" />
+  <Content Include="api-test.html" />
+    <Content Include="Web.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="Exists('$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets')" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <ProjectExtensions>
     <VisualStudio>
