--- a/aspx/packages.config
+++ b/aspx/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.8.5" targetFramework="net472" />
 </packages>
